--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,8 @@ test:
 #
 production:
   <<: *default
+  adapter: mysql2
   database: businesstrip_planner_production
-  username: businesstrip_planner
-  password: <%= ENV['BUSINESSTRIP_PLANNER_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
